benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/debug/bignum_ModExp_DivMod_ModExpPow2_Zeroes_iter1_error.log
=== Verification Error - Iteration 1 ===
File: /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/files/bignum_ModExp_DivMod_ModExpPow2_Zeroes.rs
Time: 2025-09-15 19:05:58

Full Error Output:
--------------------------------------------------------------------------------
Compilation failed: error[E0425]: cannot find value `result` in this scope
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_DivMod_ModExpPow2_Zeroes_impl.rs:32:24
   |
32 |         ValidBitString(result@),
   |                        ^^^^^^ not found in this scope

error[E0425]: cannot find value `result` in this scope
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_DivMod_ModExpPow2_Zeroes_impl.rs:33:17
   |
33 |         Str2Int(result@) == Exp_int(Str2Int(b@), Str2Int(e@)) % Str2Int(m@),
   |                 ^^^^^^ not found in this scope

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0425`.

--------------------------------------------------------------------------------

Additional Output:
error[E0425]: cannot find value `result` in this scope
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_DivMod_ModExpPow2_Zeroes_impl.rs:32:24
   |
32 |         ValidBitString(result@),
   |                        ^^^^^^ not found in this scope

error[E0425]: cannot find value `result` in this scope
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_DivMod_ModExpPow2_Zeroes_impl.rs:33:17
   |
33 |         Str2Int(result@) == Exp_int(Str2Int(b@), Str2Int(e@)) % Str2Int(m@),
   |                 ^^^^^^ not found in this scope

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0425`.
